clusters/test-deployment/apps/headlamp-test/namespace-headlamp-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp-test
  labels:
    app.kubernetes.io/part-of: test-deployment
